Complete 'bugs and fixes' section of 'readme.md'. Add media query to disable scroll to top button on ios devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -442,4 +442,8 @@ h1 {
 }
 }   
 
-
+/*--- Scroll to top botton hidden for iOs devices--- */
+@supports (-webkit-touch-callout: none) {
+    #myBtn {
+  display: none;
+    }
